output/codegemma_temp0.0/modern_linkerd_001.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: my-container
          image: my-image
---
apiVersion: linkerd.io/v1alpha2
kind: AuthorizationPolicy
metadata:
  name: allow-service1-service2
spec:
  action: ALLOW
  services:
    - name: service1
    - name: service2
---
apiVersion: linkerd.io/v1alpha2
kind: AuthorizationPolicy
metadata:
  name: deny-service3
spec:
  action: DENY
  services:
    - name: service3
